# pooled

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: future.rs  lib.rs  map.rs  sequential.rs  simple.rs
tests/: future.rs  map.rs  sequential.rs  simple.rs
